--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 *{
     margin: 0;
     padding: 0;
+    font-family:Dream Avenue;
+    color: aliceblue;
 }
 
 body{
@@ -9,7 +11,9 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: blanchedalmond;
+    background-image: url(img/interfaz\ calculadora.png);
+    background-size: cover;
+
 }
 
 header{
@@ -22,12 +26,19 @@ header{
 }
 
 .title-caculator{
-    width: 70%;
+    width: 85%;
     height: auto;
-    background-color: aqua;
+    background-color: #087793b4;
     margin-top: 5rem;
     margin-bottom: 4rem;
+    border-radius: 0.7rem;
+    display: flex;
+    justify-content: center;
+    font-size: 0.8rem;
+    padding: 0.5rem;
 }
+
+
 
 main{
     width: 100%;
@@ -40,26 +51,100 @@ main{
 }
 
 .calculator{
-    width: 65%;
+    width: 80%;
     height: 100%;
     display: flex;
     justify-content: center;
     padding-top:0.8rem ;
     padding-bottom:0.8rem ;
-    background-color: rgba(0, 0, 0, 0.42);
+    background-color: #00000034;
+    border-radius: 0.5rem;
 }
 
 .content-calculator{
-    width: 90%;
+    width: 86%;
     height: auto;
-    background-color: blue;
     display: flex;
+    background-image: linear-gradient( #087793b4, #021d38b4);
     flex-direction: column;
     align-items: center;
+    border-radius: 0.5rem;
+    padding: 3%;
+}
+
+.operations{
+    margin-top: 2rem;
+    width: 100%;
+    height: 6rem;
+    text-align: right;
+}
+.input-operation{
+    font-size: 1.5rem;
+    text-align: right;
+    border: none;
+    /* outline: none; */
+    background-color: transparent;
+}
+.show-operation>input{
+    width: 90%;
+    height: auto;
+}
+.result{
+    font-size: 2rem;
+}
+
+.body-calculator{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content-buttons{
+    width: auto;
+    height: auto;
+}
+
+.btns{
+    display: flex;
+    justify-content: center;
+}
+button{
+    width: 3.5rem;
+    height: 3.5em;
+    background-color: transparent;
+    margin-bottom: 0.2rem;
+    margin-right: 0.2rem;
+    border: 0.09rem solid rgba(240, 248, 255, 0.568);
+}
+ 
+.button_igual{
+    width: 7.2rem;
+}
+
+.icon-delete{
+    width: 40%;
+    height: auto;
+    margin-top: 5px;
+    object-fit: contain;
+}
+
+
+.body-calculator>.btns{
+  width: 100%;
+  height: auto;
+
 }
 footer{
     width: 100%;
-    height: auto;
+    height: 3rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #021d38b4;
+}
+
+footer>h3{
+    font-size: 0.8rem;
 }
